# nlnet-milestones3-

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  j2534.proto  sdkconfig.defaults  sdkconfig.old
components/omni_ble/: CMakeLists.txt  Kconfig.inc  README.md  ble.c  omni_ble.c  omni_ble_gatt.c
components/omni_ble/include/omnitrix/: omni_ble.h  omni_ble_gatt.h
components/omni_hello/: CMakeLists.txt  README.md  hello.c  isotp.c  isotp.h  test.c
components/omni_hello/include/omnitrix/: hello.h
components/omni_libnvs/: CMakeLists.txt  libnvs.c
components/omni_libnvs/include/omnitrix/: libnvs.h
components/omni_libvin/: CMakeLists.txt
components/omni_libvin/include/omnitrix/: libvin.h
components/omni_ota/: CMakeLists.txt  Kconfig.inc  ota.c
components/omni_ota/include/omnitrix/: ota.h
hardware-phase-3/: CMakeLists.txt  generate-uuids.py  j2534.proto  sdkconfig.defaults
hardware-phase-3/main/: ble.c  hello.c  j2534.c  j2534.pb-c.h  libcan.c  libnvs.c
hardware-phase-3/main/include/omnitrix/: ble.h  hello.h  libisotp.h
hardware-phase-3/test/: sdkconfig.defaults
hardware-phase-3/test/main/: test.c
hardware-phase-3/test/main/ble/hello/: handle.c  uuid.c
linux/components/soc/: CMakeLists.txt
linux/include/: esp_err.h  esp_log.h  esp_ota_ops.h  esp_partition.h  nvs.h  nvs_flash.h
linux/include/driver/: twai.h
linux/include/freertos/: FreeRTOS.h
linux/include/host/: ble_att.h  ble_gap.h  ble_gatt.h  ble_hs.h  ble_hs_adv.h  ble_uuid.h
linux/include/nimble/: nimble_port.h  nimble_port_freertos.h
linux/include/os/: os_mbuf.h
linux/include/services/ans/: ble_svc_ans.h
linux/include/services/gap/: ble_svc_gap.h
linux/include/services/gatt/: ble_svc_gatt.h
main/: CMakeLists.txt  Kconfig.projbuild  ble.c  debug.c  heartbeat.c  hello.c  isotp.c  j2534.c  j2534.pb-c.c  led.c  led_ble.c  libcan.c  libisotp.c  libvin.c  main.c  ota.c  test.h  tests.c
main/include/: isotp.h
main/include/omnitrix/: debug.h  heartbeat.h  j2534.h  led.h  libcan.h  libisotp.h  libnvs.h  ota.h
test/: CMakeLists.txt  sdkconfig.defaults
test/main/: CMakeLists.txt  ble.c  test.c
test/main/ble/hello/: handle.c  uuid.c
test/main/can/isotp/: read.c  write-multi.c  write-single.c
test/main/can/raw/: read.c  write.c
